Sun Feb 15 02:03:47 CET 2004 (tk)
---------------------------------
  * freshclam: use O_BINARY when saving database under Cygwin

Sat Feb 14 19:08:44 GMT 2004 (njh)
---------------------------------
  * libclamav:	Handle spaces in boundaries

Sat Feb 14 17:28:15 GMT 2004 (njh)
----------------------------------
  * libclamav:	Had deleted O_BINARY by mistake
  * clamav-milter:	Added TCPwrappers support
			Removed duplication in version string
			Handle machines that don't have in_port_t

Sat Feb 14 10:28:47 CET 2004 (tk)
---------------------------------
  * configure: check for tcpwrappers and definition of in_port_t (requested
	       by Nigel)

Fri Feb 13 22:35:55 CET 2004 (tk)
---------------------------------
  * Makefile: don't use non standard id flags (thanks to Andy Fiddaman
	      <clam*fiddaman.net>)
  * clamscan: manager.c - include clamav-config.h, it fixes a problem with
	      hardcoded clamav user (thanks to Reinhard Max <max*suse.de>)

Fri Feb 13 14:28:05 GMT 2004 (njh)
----------------------------------
  * libclamav: Added a new bounce delimeter

Thu Feb 12 18:47:44 GMT 2004 (njh)
----------------------------------
  * libclamav: Use mkstemp() on Solaris in cl_mbox()

Wed Feb 11 18:00:13 CET 2004 (tk)
---------------------------------
  * libclamav: enabled autodetection of Eserv/2 mail files (thanks to
	       Andrey Cherezov <andrey*cherezov.koenig.su>)

Wed Feb 11 08:19:54 GMT 2004 (njh)
----------------------------------
  * libclamav: Use O_BINARY when saving attachments which is required for
	Cygwin. Thanks to "Andrey Cherezov" <andrey*cherezov.koenig.su>

Wed Feb 11 00:08:26 CET 2004 (tk)
---------------------------------
  V 0.66 (released with OLE2 and Dazuko support disabled)

Tue Feb 10 23:54:47 CET 2004 (tk)
---------------------------------
  * docs: updated clamdoc.pdf
  * docs: updated Polish how-to (thanks to Przemyslaw Holowczyc)

Tue Feb 10 19:17:53 CET 2004 (tk)
---------------------------------